--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-wrap-balancer": "^0.5.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
